csuf compliant syllabus template

--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -42,7 +42,7 @@
 \begin{center}
   {\LARGE\textbf{POSC 315: Introduction to Public Policy}}\\[0.5em]
   {\large California State University, Fullerton}\\
-  {\large Division of Politics, Administration \& Justice}\\[1em]
+  {\large Department of Political Science}\\[1em]
   \includegraphics[width=0.2\textwidth, alt={CSUF logo}]{csuf_logo.png}
 \end{center}
 \vspace{1em}
@@ -68,7 +68,7 @@ This course introduces the policy process, including agenda-setting, formulation
 
 \section*{Required Texts}
 \begin{itemize}[leftmargin=1.5em]
-  \item Birkland, Thomas A. (2020). \textit{An Introduction to the Policy Process}, 5th ed. Routledge.
+  \item Birkland, Thomas A. (2019). *An Introduction to the Policy Process*, 5th ed. Routledge.
   \item Supplementary readings available on Canvas
 \end{itemize}
 
@@ -111,9 +111,7 @@ CSUF is committed to providing equal access. If you have a disability and requir
 Academic honesty is expected. Plagiarism or cheating will result in disciplinary action. Familiarize yourself with CSUF’s policy on academic dishonesty.
 
 \section*{University Policies}
-Please refer to the university’s syllabus policies website at 
-\href{https://fdc.fullerton.edu/teaching/student-info-syllabi.html}{\url{https://fdc.fullerton.edu/teaching/student-info-syllabi.html}} 
-for important campus-wide policies on academic integrity, disability accommodations, emergency procedures, and student conduct. These policies are in effect for all courses at CSU Fullerton.
+Please refer to the university’s syllabus policies website at \href{https://www.fullerton.edu/senate/documents/policy/SyllabiPolicy.pdf}{fullerton.edu/senate/documents/policy/SyllabiPolicy.pdf} for important campus-wide policies on academic integrity, disability accommodations, emergency procedures, and student conduct. These policies are in effect for all courses at CSU Fullerton.
 
 \section*{Tentative Schedule}
 \begin{itemize}[leftmargin=1.5em]
