csuf compliant syllabus template

--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -111,7 +111,9 @@ CSUF is committed to providing equal access. If you have a disability and requir
 Academic honesty is expected. Plagiarism or cheating will result in disciplinary action. Familiarize yourself with CSUF’s policy on academic dishonesty.
 
 \section*{University Policies}
-Please refer to the university’s syllabus policies website at \href{https://www.fullerton.edu/senate/documents/policy/SyllabiPolicy.pdf}{fullerton.edu/senate/documents/policy/SyllabiPolicy.pdf} for important campus-wide policies on academic integrity, disability accommodations, emergency procedures, and student conduct. These policies are in effect for all courses at CSU Fullerton.
+Please refer to the university’s syllabus policies website at
+\url{https://fdc.fullerton.edu/teaching/student-info-syllabi.html} for important campus-wide policies on academic integrity, disability accommodations, emergency procedures, and student conduct.\\
+These policies are in effect for all courses at CSU Fullerton.
 
 \section*{Tentative Schedule}
 \begin{itemize}[leftmargin=1.5em]
